# vault

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  sqlx-data.json  tailwind.config.js
configuration/: base.yaml  local.yaml
migrations/: 20230418190905_init.sql  20230420224954_session_store.sql  20230422024851_change_difficulty_location.sql  20230422025827_add_size_field_to_versions.sql  20230422043959_add_version_to_worlds.sql  20230426004901_init.sql  20230426052616_add_deleted_worlds_table.sql  20230503001931_add_oauth_tables.sql  20230523203600_add_api_keys_table.sql  20230601044443_drop_unused_oauth_tables.sql  20230608072339_drop_game_mode_from_world_version.sql
src/: configuration.rs  lib.rs  main.rs  runner.rs  scopes.rs  utilities.rs
src/auth/: middleware.rs  mod.rs  schemas.rs  token.rs  utils.rs
src/database/: mod.rs
src/database/models/: api_key.rs  client.rs  mod.rs  responses.rs  user.rs  worlds.rs
src/object/: file_handler.rs  handler.rs  mod.rs
src/responses/: client.rs
src/routes/: auth.rs  mod.rs  versions.rs  worlds.rs
src/routes/auth/: api.rs  mod.rs  ui.rs
src/routes/dashboard/: mod.rs  ui.rs
src/tasks/: mod.rs
static/: input.postcss  output.css
templates/: applications.html  authorize.html  authorize_client.html  dashboard.html  layout.html  login.html  register.html
templates/components/: register_form.html  register_success.html
