[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vault"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde"] }

[dependencies.sqlx]
version = "0.6.3"
features = [
    "postgres",
    "sqlite",
    "any",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "migrate",
    "offline"
]
