[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vault"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde"] }
jsonwebtoken = "8.3.0"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
serde_json = "1.0.96"
futures = "0.3.28"
argon2 = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }

[dependencies.sqlx]
version = "0.6.3"
features = [
    "postgres",
    "sqlite",
    "any",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
    "migrate",
    "offline"
]
